[package]
name = "toolbox"
version = "0.1.8"
authors = ["dvshapkin <dvshapkin@mail.ru>"]
edition = "2018"

description = "Simple tools for daily use"

readme = "README.md"

documentation = "https://docs.rs/toolbox"
homepage = "https://github.com/dvshapkin/toolbox"
repository = "https://github.com/dvshapkin/toolbox"

keywords = ["tools", "vfs", "graph", "algorithm"]

license = "Apache-2.0"

[dependencies]
