[package]
name = "toolbox"
version = "0.2.7-final"
authors = ["dvshapkin <dvshapkin@mail.ru>"]
edition = "2018"

description = "Simple tools for daily use"

readme = "README.md"

documentation = "https://docs.rs/toolbox"
homepage = "https://github.com/dvshapkin/toolbox"
repository = "https://github.com/dvshapkin/toolbox"

keywords = ["tools", "vfs", "algorithm", "data-structure", "matrix"]

license = "Apache-2.0"

[dependencies]
alg_ds = "0.2"
vfsys = "0.1"
