[package]
name = "toolbox"
version = "0.2.9"
authors = ["dvshapkin <dvshapkin@mail.ru>"]
edition = "2018"

description = "Simple tools for daily use"

readme = "README.md"

documentation = "https://docs.rs/toolbox"
homepage = "https://github.com/dvshapkin/toolbox"
repository = "https://github.com/dvshapkin/toolbox"

keywords = ["tools", "vfs", "algorithm", "data-structure", "matrix"]

license = "MIT"

[dependencies]
alg_ds = "0.3"
vfsys = "0.1"
